# network-ball-gtk

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  add_autostart.sh  application.c  clear_autostart.sh  cmake_install.cmake  meson.build  network-ball-gtk.cbp
autostart/: ball-network.desktop
include/: app_utils.h  utils.h
release/: network-ball-gtk
releases/: network-ball-gtk
src/: app_utils.c  application.c  main.c  utils.c
